--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -22,7 +22,7 @@
 
 
     <%= form_with(url: search_blogs_path, local: true, method: :get, class: "search-form") do |form| %>
-      <%= form.text_field :keyword, placeholder: "Search", class: "search-input", style: "width: 30%; height: 50px; border: 2px solid #FFA500;" %>
+      <%= form.text_field :keyword, placeholder: "word to search for", class: "search-input", style: "width: 30%; height: 50px; border: 2px solid #FFA500;" %>
       <%= form.submit "Search Blog", class: "search-btn" %>
     <% end %>
 
