日付検索追加

--- a/app/views/blogs/search.html.erb
+++ b/app/views/blogs/search.html.erb
@@ -1,13 +1,19 @@
 <style>
    .back-link {
-    margin-bottom: 20px;
+    margin-bottom: 0;
     position: relative;
+    top: -50px;
   }
-  
+
   footer {
     z-index: 2;
   }
+
+  .contents {
+    padding-bottom: 100px; /* ボタンが重ならないようにコンテンツの下に余白を設定 */
+  }
 </style>
+
 
 <div class="contents row">
   <% if @blogs.empty? %>
