--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -25,6 +25,11 @@
       <%= form.text_field :keyword, placeholder: "word to search for", class: "search-input", style: "width: 30%; height: 50px; border: 2px solid #FFA500;" %>
       <%= form.submit "Search Blog", class: "search-btn" %>
     <% end %>
+    <%= form_with(url: search_blogs_path, local: true, method: :get, class: "search-form") do |form| %>
+  <%= form.text_field :start_date, type: "date", class: "search-input", style: "width: 30%; height: 50px; border: 2px solid #FFA500;" %>
+  <%= form.submit "Search Blog", class: "search-btn" %>
+<% end %>
+
 
     <div class="row justify-content-center">
      <% @blogs.each do |blog| %>
